clusters/ocelot.archifleks.xyz/seed/jackett/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jackett
  name: jackett
  namespace: seed
spec:
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: jackett
  template:
    metadata:
      labels:
        app: jackett
    spec:
      containers:
      - name: jackett
        image: linuxserver/jackett:0.21.643 # {"$imagepolicy": "seed:jackett"}
        imagePullPolicy: Always
        volumeMounts:
        - mountPath: /seed
          name: seed
        - mountPath: /config
          name: config
      securityContext:
        fsGroup: 1000
      volumes:
      - name: seed
        hostPath:
          # directory location on host
          path: /srv/hostpaths/seed
          # this field is optional
          type: DirectoryOrCreate
      - name: config
        hostPath:
          # directory location on host
          path: /srv/hostpaths/jackett
          # this field is optional
          type: DirectoryOrCreate
