clusters/ocelot.archifleks.xyz/seed/jackett/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: seed
  name: jackett
spec:
  ports:
    - port: 9117
  selector:
    app: jackett
  type: ClusterIP
