clusters/ocelot.archifleks.xyz/seed/jackett/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: seed
  name: jackett
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: jackett.archifleks.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jackett
                port:
                  number: 9117
  tls:
  - hosts:
    - jackett.archifleks.xyz
    secretName: jackett.archifleks.xyz
